# mask

./: .gitignore  CMakeLists.txt  main.cpp  test.cpp  train.cpp
libs/: MessageReplacer.h  cvUtils.h  fileUtils.h
tests/: computeHistogram.cpp  hello-world-test.cpp
